src/test/resources/invalid/typecheck/Print_VarNotFound.vas
class Main is
    this() is
        println("$a")
    end
end
